cros: Change virtual keyboard icon color in OOBE

This is a follow up for crbug.com/857221

Bug: 873594
Change-Id: I8a5ab4fd2762b48b0b1fdd3d2f9d499673658d6d
Reviewed-on: https://chromium-review.googlesource.com/1175145
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583177}
Former-commit-id: 3fac86d9b8bf022181b1b68b6b05e0fe56c026b9