ash/system/virtual_keyboard/virtual_keyboard_tray.h
@@ -6,6 +6,7 @@
 #define ASH_SYSTEM_VIRTUAL_KEYBOARD_VIRTUAL_KEYBOARD_TRAY_H_
 
 #include "ash/keyboard/keyboard_ui_observer.h"
+#include "ash/session/session_observer.h"
 #include "ash/shell_observer.h"
 #include "ash/system/tray/tray_background_view.h"
 #include "base/macros.h"
@@ -21,7 +22,8 @@ namespace ash {
 class VirtualKeyboardTray : public TrayBackgroundView,
                             public KeyboardUIObserver,
                             public keyboard::KeyboardControllerObserver,
-                            public ShellObserver {
+                            public ShellObserver,
+                            public SessionObserver {
  public:
   explicit VirtualKeyboardTray(Shelf* shelf);
   ~VirtualKeyboardTray() override;
@@ -41,14 +43,22 @@ class VirtualKeyboardTray : public TrayBackgroundView,
   // ShellObserver:
   void OnKeyboardControllerCreated() override;
 
+  // SessionObserver:
+  void OnSessionStateChanged(session_manager::SessionState state) override;
+
  private:
   void ObserveKeyboardController();
   void UnobserveKeyboardController();
+
+  // Updates the icon UI.
+  void UpdateIcon();
 
   // Weak pointer, will be parented by TrayContainer for its lifetime.
   views::ImageView* icon_;
 
   Shelf* shelf_;
+
+  ScopedSessionObserver session_observer_{this};
 
   DISALLOW_COPY_AND_ASSIGN(VirtualKeyboardTray);
 };
